manifest/objects/LEXMAGICMOVER__NAMNoteConverted__c.object
<CustomObject>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedDate__c</fullName>
        <label>LegacyNoteConvertedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedId__c</fullName>
        <label>LegacyNoteConvertedId</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedLastModifiedDate__c</fullName>
        <label>LegacyNoteConvertedLastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedOwnerId__c</fullName>
        <label>LegacyNoteConvertedOwnerId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedParentId__c</fullName>
        <label>LegacyNoteConvertedParentId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>NAMNoteConverted</label>
    <listViews>
        <fullName>LEXMAGICMOVER__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NC-{0000000}</displayFormat>
        <label>NAMNoteConverted Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NAMNotesConverted</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>